# Rogylus

./: .gitignore  CMakeLists.txt  README.md  Rogylus.oxproj
$PROJECT_NAME/: CMakeLists.txt
$PROJECT_NAME/src/: $PROJECT_NAMELayer.cpp  $PROJECT_NAMELayer.hpp  App.cpp
$PROJECT_NAMEModule/: CMakeLists.txt
$PROJECT_NAMEModule/src/: Module.cpp  Module.hpp
.github/workflows/: renamer.yml
Rogylus/: CMakeLists.txt
Rogylus/src/: App.cpp  Assets.hpp  Components.hpp  RogylusLayer.cpp  RogylusLayer.hpp
RogylusModule/: CMakeLists.txt
RogylusModule/src/: Module.cpp  Module.hpp
RogylusModule/src/Systems/: CharacterSystem.cpp  CharacterSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  GameManagerSystem.cpp  GameManagerSystem.hpp  WeaponSystem.cpp  WeaponSystem.hpp
